<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActionView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AwareActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/positionDesc"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/positionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/btnToggleService"
        android:text="@string/default_position"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/btnToggleService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/textView2"
        android:onClick="toggleService"
        android:text="ToggleButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/turnOnOff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnToggleService"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:height="250dp"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusText"
        android:layout_marginTop="26dp"
        android:text="@string/roomState"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/roomStateView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_toRightOf="@+id/btnToggleService"
        android:text="@string/default_roomstate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/whatIsHappening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextView01"
        android:text="@string/default_whatIsHappening"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
